# BigData

./: README.md  big_dataset.csv  fastfood.csv  fastfood.ipynb  final.csv  final.ipynb  final_aumentados.csv  novo_fastfood.csv  obesity.ipynb  pyproject.toml  setup_dev_env.sh
augmentation_datasets/: fastfood_augmented.csv
benchmarks/: benchmark_county_results.csv  benchmark_results.csv
benchmarks_scripts/: benchmark.py  pythonXpySpark_states.py
county_partitioned_states/: alaska.csv  arizona.csv  arkansas.csv  california.csv  district_of_columbia.csv  florida.csv  georgia.csv  illinois.csv  indiana.csv  iowa.csv  kansas.csv  kentucky.csv  louisiana.csv  maine.csv  massachusetts.csv  michigan.csv  minnesota.csv  mississippi.csv  missouri.csv  nevada.csv  new_jersey.csv  oklahoma.csv  pennsylvania.csv  rhode_island.csv  south_dakota.csv  tennessee.csv  vermont.csv  west_virginia.csv  wisconsin.csv  wyoming.csv
data/augmented/: fastfood_augmented.csv
data/county_partitioned_states/: alabama.csv  colorado.csv  connecticut.csv  delaware.csv  hawaii.csv  idaho.csv  maryland.csv  montana.csv  nebraska.csv  new_hampshire.csv  new_mexico.csv  new_york.csv  north_carolina.csv  north_dakota.csv  ohio.csv  oregon.csv  puerto_rico.csv  south_carolina.csv  (+4 more)
data_augmentation_scripts/: county_partitioning.py  fastfood_augmented.py
dataset_preprocessing/: fastfood.ipynb
dataset_preprocessing_scripts/: dataset_preprocessing.py
processed_datasets/: fastfood_obesity_full.csv  obesity.csv
qgis/: Fast food restaurants + Obesity Index.qgz
results/: benchmark_results.csv
(+19 files in other folders)
