[project]
name = "bigdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "pyodbc>=5.2.0",
    "pyspark>=3.5.5",
    "setuptools>=76.0.0",
    "sqlalchemy>=2.0.41",
    "sweetviz>=2.3.1",
]
